--- a/style.css
+++ b/style.css
@@ -148,6 +148,24 @@ article .post-thumbnail img{
 	height:auto;
 }
 
+article.post-aside small{
+	font-weight: bold;
+}
+article.post-aside .well{
+	background: #e0eefc;
+	padding: 10px;
+}
+ article.post-link .well{
+	background: #f4f4f4;
+	padding: 10px;
+ }
+
+ article.post-gallery{
+	background: #333;
+	color: #fff;
+	padding:5px 10px;
+	margin-top:5px;
+ }
 .button{
 	background:#009acd;
 	color:#fff;
@@ -186,4 +204,22 @@ footer.main-footer li{
 
 footer.main-footer a{
 	color:#fff;
+}
+
+.archive-post{
+	border-bottom: #807d7d 1px solid;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+}
+
+.archive-post h4, .archive-post p{
+	margin: 0;
+	padding: 0;
+}
+
+.phone{
+	background:#f4f4f4;
+	border:1px solid #ccc;
+	padding: 8px;
+	font-weight:bold;
 }
