--- a/style.css
+++ b/style.css
@@ -258,8 +258,74 @@ footer.main-footer a{
 	margin-bottom:5px;
 }
 
-.side-widget li{
+.side-widget li, .box li{
 	list-style: none;
 	line-height: 2.1em;
 	border-bottom: 1px dotted #ccc;
 }
+
+.showcase{
+	background:#e0eefc;
+	padding:40px;
+	margin-bottom:30px;
+	text-align: center;
+  }
+  
+  .showcase h3{
+	text-align: center;
+  }
+  
+  .box{
+	width:32%;
+	float:left;
+	padding:0 6px;
+  }
+  
+  .box h3{
+	text-align: center;
+	background:#009acd;
+	padding:5px;
+	color:#fff;
+  }
+  
+  .comment-body{
+	border:#ccc 1px solid;
+	margin-bottom:10px;
+	padding:20px 10px;
+  }
+  
+  
+  .comment-meta{
+	background:#333;
+	color:#fff;
+	padding:10px;
+	overflow:auto;
+  }
+  
+  .comment-meta img{
+	float:left;
+	margin-right:10px;
+  }
+  
+  .comment-meta time{
+	margin-left:12px;
+  }
+  
+  .comment-reply-link{
+	background:#009acd;
+	color:#fff;
+	display:inline-block;
+	padding:10px 15px;
+  }
+  
+  .comment-form input,.comment-form textarea{
+	width:100%;
+	padding:3px;
+	border:#ccc 1px solid;
+	margin-bottom:20px;
+  }
+  
+  .comment-form input{
+	height:30px;
+  }
+  
